Probably Approximatly Better

--- a/Proposal/thesis_paper/document.bib
+++ b/Proposal/thesis_paper/document.bib
@@ -729,3 +729,20 @@ pages = {331-339}
   year={2007},
   publisher={John Benjamins publishing company}
 }
+
+@inproceedings{hirsh1994bootstrapping,
+  title={Bootstrapping training-data representations for inductive learning: A case study in molecular biology},
+  author={Hirsh, Haym and Japkowicz, Nathalie},
+  booktitle={AAAI},
+  pages={639--644},
+  year={1994},
+  organization={Citeseer}
+}
+
+@inproceedings{sutton1991learning,
+  title={Learning Polynomial Functions by Feature Construction.},
+  author={Sutton, Richard S and Matheus, Christopher J},
+  booktitle={ML},
+  pages={208--212},
+  year={1991}
+}
