--- a/Proposal/thesis_paper/jair paper.tex
+++ b/Proposal/thesis_paper/jair paper.tex
@@ -706,42 +706,38 @@ In both cases, we see that the two level application of Deep-FEAGURE yields slig
 \section{Related Work}
 
 Feature generation approaches were found useful for a wide variety of learning problems \cite{markovitch2002feature,ragavan1993complex,utgo1991linear}.
-These feature generation approaches search for new features that better represent the target concept than existing features. To that end, there are two major approaches for feature generation: combinational and using additional knowledge.
-Combinational feature generation techniques aim to locate more descriptive features by combining existing features in various ways. The LDMT algorithm \cite{utgo1991linear}, for example, uses linear combinations of the original features to construct more informative ones. 
-%As in the previously described algorithms, lmdt (Utgoff & Brodley, 1991) performs feature construction
-%in the course of building a decision-tree classifier. At each created tree node, the algorithm constructs a
-%hyperplane feature by training a thermal linear machine. The construction procedure is aimed at generating
-%concise hyperplanes that are based on relevant data attributes. When lmdt detects that a linear machine is
-%near its final set of boundaries, it eliminates the variable which least contributes to discriminating between
-%elements of the two classes in the current set of instances. Afterwards, it continues training the linear
-%machine. Finally, the most accurate linear machine with the minimum number of variables is chosen.
-%The lfc algorithm performs feature construction throughout the course of building a decision tree classifier. New features are constructed at each created tree node by performing a branch and bound search in
-%feature space. The search is performed by iteratively combining the feature having the highest InfoGain
-%value with an original basic feature that meets a certain filter criterion. The constructed features may be
-%used in the generated tree classifier, which is returned as the final output of the algorithm.
-Another major class of combinational feature generation approaches is that of \emph{Deep Learning} \cite{lecun1998gradient,bengio2009learning,plotz2011featurefull,kim2013deepfull}. Deep learning techniques seek to create features through complex, non-linear combinations of existing features, allowing for a wide variety of possible features.
+These feature generation approaches search for new features that better represent the target concept than existing features. To that end, there are three major approaches for feature generation: tailored approaches, combinational techniques and methods utilizing external knowledge.
+Tailored approaches \cite{sutton1991learning,hirsh1994bootstrapping} are designed for specific problem domains and rely on domain-specific background knowledge for feature construction. One such example is the bootstrapping algorithm \cite{hirsh1994bootstrapping}, which was designed for the domain of molecular biology. The algorithm represents features as nucleotides sequences
+whose structure is determined by existing background knowledge. The algorithm uses an initial set of feature sequences, produced by human experts, and uses a domain-specific set of operators to alter them into new sequence features. Such special-purpose algorithms may be effectively tailored for a given domain, but have proven difficult to generalize to other domains and problems
+
+Combinational feature generation techniques aim to locate more descriptive features by combining existing features in various ways, without regards to the specific problem domain. The LDMT algorithm \cite{utgo1991linear}, for example, performs feature construction in the course of building a decision-tree classifier. At each created tree node, the algorithm constructs a hyperplane feature through linear combinations of existing features in a way likely to produce concise, relevant hyperplanes. 
+Another major class of combinational feature generation approaches is that of \emph{Deep Learning} \cite{lecun1998gradient,bengio2009learning,plotz2011featurefull,kim2013deepfull}. Deep learning techniques seek to create features through complex combinations of existing features, using a deep structure of linear and non-linear functions.
+Doing so allows for a wide variety of possible combinational features.
+This technique bears some similarities to our approach, in that it allows for the creation of complex features. Unlike deep learning methods, our approach utilizes external knowledge to further improve the generated features. Furthermore, our use of induction algorithms allows for a more generic combination of features.
 
 In contrast to combinational approaches, some feature generation algorithms, including FEAGURE, seek to inject additional knowledge into the existing learning problem. These approaches seek to do so almost exclusively through the use of relational data. 
-Within this wide family of knowledge-based approaches, we can see a distinction between unsupervised, supervised and mixed approaches.
+Within this wide family of knowledge-based approaches, we can see a distinction between unsupervised and supervised approaches.
 Unsupervised knowledge-based feature generation techniques aim to incorporate additional knowledge from external sources without consideration to the labels supplied by a given training set. They do so in several differing ways:
 \begin{itemize}
-	\item Concept based approaches such as ESA \cite{gabrilovich2009wikipediafull} ,for example, present a method for generating features that are based on semantic concepts. These approaches rely on complex techniques to create a mapping between existing data and the semantic concepts which serve as external knowledge.
-	\item Propositionalization \cite{kramer2000bottom} approaches are a class of feature generation algorithms that rely on relational data to serve as external knowledge. They operate by using a combination of operators in order to create first-order logic predicates connecting existing data and relational knowledge.
-	\citeA{cheng2011automatedfull} devise a generic framework to do so using linked data, and offer some insights into taxonomy-based features.
-	The \emph{Shallow} algorithm described in section \ref{shallow_section} is a propositionalization algorithm.
-	\item Data mining approaches such as FeGeLOD \cite{paulheim2012unsupervisedfull} aim to directly utilize linked data in order to automatically enrich existing data and make it more expressive.
+	\item Concept based approaches such as ESA \cite{gabrilovich2009wikipediafull} ,for example, present a method for generating features that are based on semantic concepts. These approaches rely on complex techniques to create a mapping between existing data and the semantic concepts which serve as external knowledge. This mapping is then used on the given problem, enriching the data with external concepts.
+	\item Propositionalization \cite{kramer2000bottom} approaches are a class of feature generation algorithms that rely on relational data to serve as external knowledge. They operate by using a combination of operators in order to create first-order logic predicates connecting existing data and relational knowledge. 
+	\citeA{cheng2011automatedfull} devise a generic framework to do so using linked data via relation-based queries, and offer some insights into taxonomy-based features by creating features that list the taxonomic class relationships of a given entity.
+	The \emph{Shallow} algorithm described in section \ref{shallow_section} is another example of propositionalization algorithms.
+	\item Data mining approaches such as FeGeLOD \cite{paulheim2012unsupervisedfull} aim to directly utilize linked data in order to automatically enrich existing data, yielding additional information on existing entities within the data. FeGeLOD uses feature values as entities and adds related knowledge to the example, thus creating additional features for that example. FeGeLOD then employs feature selection to filter out poor, non-representative features.
 \end{itemize}
-These knowledge-based techniques serve as a powerful tool for feature generation based on knowledge. Despite this fact, the unsupervised nature of these approaches tends to lead to a shallow exploration of the knowledge base, as deep unguided search is computationally expensive, and leads to a potentially large number of features.
+These knowledge-based techniques serve as a powerful tool for feature generation based on knowledge. Despite this fact, the unsupervised nature of these approaches tends to lead to a shallow exploration of the knowledge base, as deep unguided search is computationally expensive, and leads to a potentially large number of features. As a result of this, many of these approaches rely on feature selection to filter out irrelevant features.
 
-Unlike unsupervised approaches, some methods, FEAGURE included, seek to utilize a labelled training set in order to perform a more guided search. 
-These techniques can trace their source to \emph{Inductive Logic Programming(ILP)} \cite{quinlan1990learning,muggleton1991inductive}, a supervised approach that induces a set of first-order formulae that define a good separation of the given training set.
+Unlike unsupervised approaches, some methods, FEAGURE included, seek to utilize a labelled training set in order to perform a more guided search through the space of possible features based on external knowledge. 
+These techniques can trace their source to \emph{Inductive Logic Programming (ILP)} \cite{quinlan1990learning,muggleton1991inductive}, a supervised approach that induces a set of first-order logical formulae with the purpose of achieving a good separation of the given training set. ILP methods do so by adding additional relational constraints using the knowledge base, until formulae that separate the training set into positive and negative examples are found. To that end, these approaches make use of the refinement operator. Such an operator essentially refines formulae by adding conditions to the formula or substituting a variable with a constant. As a result of this, the conditions become increasingly specific.
  \emph{Upgrade} methods such as ICL \cite{van2001upgrade} and SGLR \cite{popescul200716} can be seen as the supervised equivalent of propositionalization methods. Instead of creating predicates a-priori, feature generation is performed during the training phase, in a more structured manner, allowing for complex features to be considered.
  While upgrade approaches bear some similarities to our approach, there are several critical differences, the key of which being the ability to more easily locate complex features through the use of existing induction algorithms. 
 
 Another type of supervised, knowledge-based, feature generation approach is \emph{Relational Learning} techniques. These techniques are designed to utilize relational databases and expand their knowledge. One such technique is that of View Learning \cite{davis2005view}. View learning generates new relational tables from the existing relational knowledge, based on labelled data.
+It does so by applying ILP on relational data to construct new, simple, relational tables, then using a Bayesian network induction algorithm, learns how these relations can be combined more effectively into a single, more complex table.
 This approach bears similarity to our approach in that it can effectively utilize background knowledge to draw conclusions using the combination of labelled data and background knowledge. Unlike our approach, these views attempt to fit new knowledge to existing examples, whereas our approach re-frames the learning problem within a new context.
 
 FEAGURE itself is a supervised knowledge-based feature generation approach. It focuses on creation of recursive induction problems, in a manner reminiscent of view learning. Unlike view learning, the recursive construction of induction problems allows for complex exploration of features, which can then be combined in a more general way through the use of existing induction algorithms.
+The features of recursive learning problems created by FEAGURE during the feature generation process are based on the ILP refinement operators.
 %can maybe elaborate more? talk about graph learning?
 
 %works on linked data ? so can talk about uses in search / graph based algorithms / trying to do entity linking and then use it->us
