more stuff again

--- a/Proposal/thesis_paper/document.bib
+++ b/Proposal/thesis_paper/document.bib
@@ -159,6 +159,17 @@ booktitle = {Proceedings of the Twelfth International Conference on Machine Lear
 pages = {331-339}
 }
 
+@article{getoor2005link,
+  title={Link mining: a survey},
+  author={Getoor, Lise and Diehl, Christopher P},
+  journal={ACM SIGKDD Explorations Newsletter},
+  volume={7},
+  number={2},
+  pages={3--12},
+  year={2005},
+  publisher={ACM}
+}
+
 @article{hoffart2013yago2,
   title={{YAGO2}: a spatially and temporally enhanced knowledge base from {W}ikipedia},
   author={Hoffart, Johannes and Suchanek, Fabian M and Berberich, Klaus and Weikum, Gerhard},
@@ -414,16 +425,6 @@ pages = {331-339}
   journal={StaR-AI},
   year={2014}
 }
-
-@incollection{kajdanowicz2013collective,
-  title={Collective classification techniques: an experimental study},
-  author={Kajdanowicz, Tomasz and Kazienko, Przemyslaw and Janczak, Marcin},
-  booktitle={New Trends in Databases and Information Systems},
-  pages={99--108},
-  year={2013},
-  publisher={Springer}
-}
-
 
 @inproceedings{ragavan1993complex,
   title={Complex concept acquisition through directed search and feature caching},
@@ -745,4 +746,37 @@ pages = {331-339}
   booktitle={ML},
   pages={208--212},
   year={1991}
+}
+
+@article{raghavan2004exploration,
+  title={An exploration of entity models, collective classification and relation description},
+  author={Raghavan, Hema and Allan, James and McCallum, Andrew},
+  year={2004}
+}
+
+@incollection{kajdanowicz2013collectiveaa,
+    title={Collective classification techniques: an experimental study},
+    author={Kajdanowicz, Tomasz and Kazienko, Przemyslaw and Janczak, Marcin},
+    booktitle={New Trends in Databases and Information Systems},
+    pages={99--108},
+    year={2013},
+    publisher={Springer}
+}
+
+@article{cheng2013relational,
+  title={Relational inference for wikification},
+  author={Cheng, Xiao and Roth, Dan},
+  journal={Urbana},
+  volume={51},
+  pages={61801},
+  year={2013}
+}
+
+@inproceedings{hoffart2011robust,
+  title={Robust disambiguation of named entities in text},
+  author={Hoffart, Johannes and Yosef, Mohamed Amir and Bordino, Ilaria and F{\"u}rstenau, Hagen and Pinkal, Manfred and Spaniol, Marc and Taneva, Bilyana and Thater, Stefan and Weikum, Gerhard},
+  booktitle={Proceedings of the Conference on Empirical Methods in Natural Language Processing},
+  pages={782--792},
+  year={2011},
+  organization={Association for Computational Linguistics}
 }
